feat: major improvements - E2E tests, CI/CD, bug fixes, and fork integration (#9)
* docs: reorganize documentation structure and update to reflect implementation

- Move documentation files to docs/ folder for better organization
  - ARCHITECTURE.md → docs/ARCHITECTURE.md
  - IMPLEMENTATION_STATUS.md → docs/IMPLEMENTATION_STATUS.md
  - A2A_MIGRATION_GUIDE.md → docs/A2A_MIGRATION_GUIDE.md

- Completely rewrite ARCHITECTURE.md to reflect actual implementation
  - Change from "Wrapper Pattern" to "Transport Implementation Pattern"
  - Update package structure to match actual code (pkg/transport/)
  - Replace DIDAuthenticatedClient with DIDHTTPTransport
  - Add data flow diagrams and usage examples
  - Update version info (v2.0.0-alpha, A2A v0.3.0, SAGE v1.1.0)

- Update design.md with implementation status and test coverage
  - Mark all components as implemented with test coverage
  - KeySelector: 94.1% coverage (11 tests)
  - DIDVerifier: 93.1% coverage (16 tests)
  - A2ASigner: 92.2% coverage (17 tests)
  - AgentCardSigner: 91.2% coverage (43 tests)
  - Overall: 91.8% coverage (target: ≥90% achieved)

- Remove duplicate and obsolete documentation
  - Delete SAGE_A2A_INTEGRATION_GUIDE.md (duplicate content)
  - Delete docs/Todo.md (development completed)

- Update README.md documentation links to point to docs/ folder

All documentation now accurately reflects the actual codebase and
implementation status as of v2.0.0-alpha.

* build: add Make build system and development tooling

Add comprehensive Makefile with the following features:
- Build commands (build, build-examples, install)
- Testing commands (test, test-coverage, test-integration, bench)
- Code quality commands (fmt, vet, lint)
- Dependency management (deps, tidy, verify)
- Cleanup commands (clean, clean-build, clean-coverage)
- CI/CD commands (ci, ci-full, pre-commit)
- Helper commands (help, info, version)

Add .golangci.yml configuration:
- Enable 20+ linters for code quality
- Configure linter settings

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@
 *.out
 coverage.out
 coverage.html
+coverage/
+coverage_*.out
+final_coverage.out
+
+# Test output files
+test_output.txt
 
 # Dependency directories
 vendor/
@@ -80,3 +86,6 @@ logs/
 # Documentation builds
 docs/_build/
 site/
+
+# Claude Code
+.claude/
